--- a/datamine/lang/Russian_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/Russian_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-04-01T05:38:59Z</Created>
-  <LastSaved>2020-04-01T05:38:59Z</LastSaved>
+  <Created>2020-04-14T10:17:32Z</Created>
+  <LastSaved>2020-04-14T10:17:32Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -1937,7 +1938,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_unique_alastor_amulet_lore</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Alastor #273 fixes his mind on his target. Everything beyond that is a grey fog, excepting the tools of war ready for his usage. The energy from Ezaneal’s device is magnetic, leading him from one impact to the next. He hasn’t rested in years; he doesn't need to. Every warm body he cuts down feeds him with an electric pulse.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Аластор #273 - сосредотачивает свой разум на цели. Всё остальное - серый туман, за исключением орудий войны, готовых к использованию. Магнитная энергия устройства Эзанила ведёт его от удара к удару. Он уже много лет не отдыхал, да это ему и не нужно. Каждое зарезанное им тёплое тело, питает его своим электрическим импульсом.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Аластор №273 - сосредотачивает свой разум на цели. Всё остальное - серый туман, за исключением орудий войны, готовых к использованию. Магнитная энергия устройства Эзанила ведёт его от удара к удару. Он уже много лет не отдыхал, да это ему и не нужно. Каждое зарезанное им тёплое тело, питает его своим электрическим импульсом.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_unique_trinity_belt</Data></Cell>
