--- a/datamine/lang/english_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/english_xml.pak/text_ui_EIM.xml
@@ -85,8 +85,8 @@
     </Crn>
    </Xct>
   </SupBook>
-  <WindowHeight>9465</WindowHeight>
-  <WindowWidth>24000</WindowWidth>
+  <WindowHeight>7920</WindowHeight>
+  <WindowWidth>21570</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <TabRatio>274</TabRatio>
@@ -2800,7 +2800,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s105"><Data ss:Type="String">ui_eim_freeze_chance_to_crit</Data></Cell>
-    <Cell ss:StyleID="s84"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflcit Freeze anymore.</Data></Cell>
+    <Cell ss:StyleID="s84"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflict Freeze anymore.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell><Data ss:Type="String">ui_eim_damage_taken_percent_from_burning_enemies</Data></Cell>
@@ -3037,11 +3037,11 @@
    </Print>
    <Zoom>85</Zoom>
    <Selected/>
-   <TopRowVisible>335</TopRowVisible>
+   <TopRowVisible>615</TopRowVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
-     <ActiveRow>347</ActiveRow>
+     <ActiveRow>631</ActiveRow>
      <ActiveCol>1</ActiveCol>
     </Pane>
    </Panes>
