--- a/datamine/lang/german_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/german_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-04-02T08:53:02Z</Created>
-  <LastSaved>2020-04-02T08:53:02Z</LastSaved>
+  <Created>2020-04-14T10:17:23Z</Created>
+  <LastSaved>2020-04-14T10:17:23Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -771,7 +771,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_Turret_desc</Data></Cell>
     <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a turret at the cursor’s location that launches bullet Projectiles in the cursor’s direction. Chanel this Skill to hold the turret and direct its Projectiles.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Attack:&lt;/font&gt; Only usable with daggers, bows and pistols.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Attack&lt;/b&gt;, &lt;b&gt;Projectile&lt;/b&gt;, &lt;b&gt;Rogue&lt;/b&gt;, &lt;b&gt;Device&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Beschwöre einen Turm an der Position des Mauszeigers, der Geschosse in Richtung des Mauszeigers abfeuert. Kanalisiere diese Fähigkeit, um den Turm zu halten und seine Projektile zu lenken.\n&lt;font color=&quot;#cb5316&quot;&gt;Angriff:&lt;/font&gt; Nur mit Dolche, Bogen oder Pistole/n nutzbar.\n&lt;font color=&quot;#509FFF&quot;&gt;Art der Fähigkeit&lt;/font&gt;: &lt;b&gt;Angriff&lt;/b&gt;, &lt;b&gt;Projektil&lt;/b&gt;, &lt;b&gt;Schurke&lt;/b&gt; &lt;b&gt;Gegenstand&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Beschwöre einen Turm an der Position des Mauszeigers, der Geschosse in Richtung des Mauszeigers abfeuert. Kanalisiere diese Fähigkeit, um den Turm zu halten und seine Projektile zu lenken.\n&lt;font color=&quot;#cb5316&quot;&gt;Angriff:&lt;/font&gt; Nur mit Dolche, Bogen oder Pistole/n nutzbar.\n&lt;font color=&quot;#509FFF&quot;&gt;Art der Fähigkeit&lt;/font&gt;: &lt;b&gt;Angriff&lt;/b&gt;, &lt;b&gt;Projektil&lt;/b&gt;, &lt;b&gt;Schurke&lt;/b&gt;, &lt;b&gt;Gegenstand&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_Turret_Lore</Data></Cell>
@@ -965,7 +965,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonMelee_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If the Maximum Summons is reached, the zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If Maximum Summons is reached, zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Beschwöre einen Zombie an der Position des Mauszeigers, der Gegner mit Nahkampfangriffen trifft. Wenn die maximale Anzahl an Beschwörungen erreicht ist, stürmen die Zombies in Richtung des Mauszeigers.\n&lt;font color=&quot;#948ec6&quot;&gt;Zauber:&lt;/font&gt; Verwendbar mit einem Stab oder Katalysator.\n&lt;font color=&quot;#509FFF&quot;&gt;Art der Fähigkeit&lt;/font&gt;: &lt;b&gt;Zauber&lt;/b&gt;, &lt;b&gt;Beschwörung&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -980,7 +980,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonRanged_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles at Enemies. If the Maximum Summons is reached, the zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles. If Maximum Summons is reached, zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Beschwöre einen Zombie an der Position des Mauszeigers, der Gegner mit Fernkampfangriffen trifft. Wenn die maximale Anzahl an Zombies erreicht ist, verschießen die Zombies Projektile in Richtung des Mauszeigers.\n&lt;font color=&quot;#948ec6&quot;&gt;Zauber:&lt;/font&gt; Verwendbar mit einem Stab oder Katalysator.\n&lt;font color=&quot;#509FFF&quot;&gt;Art der Fähigkeit&lt;/font&gt;: &lt;b&gt;Zauber&lt;/b&gt;, &lt;b&gt;Beschwörung&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -995,7 +995,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonChampion_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. The zombie generates Threat with a warcry if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. Zombie generates Threat if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Beschwöre einen Zombie an der Position des Mauszeigers, der Bedrohung erzeugt und Gegnern durch Nahkampfangriffen Giftschaden zufügt. Der Zombie erzeugt eine Bedrohung mit einem Kriegsschrei, wenn dieser erneut gewirkt wird.\n&lt;font color=&quot;#948ec6&quot;&gt;Zauber:&lt;/font&gt; Verwendbar mit einem Stab oder Katalysator.\n&lt;font color=&quot;#509FFF&quot;&gt;Art der Fähigkeit&lt;/font&gt;: &lt;b&gt;Zauber&lt;/b&gt;, &lt;b&gt;Beschwörung&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -2015,8 +2015,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you and your Allies deal with the base Damage Type used by this Skill.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Gewährt einen Buff, mit dem du und deine Verbündeten zusätzlichen Schaden verursachen kannst, basierend auf dem Grundelement von dieser Fähigkeit.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you deal with the base Damage Type used by this Skill. The Lighting can now also bounce between Allies, and when they are Hit, they also receive the Damage Buff. </Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Gewährt einen Buff, mit dem du und deine Verbündeten zusätzlichen Schaden verursachen kannst, basierend auf dem Grundelement von dieser Fähigkeit. Der Blitz kann jetzt auch zwischen Verbündeten umherspringen.Wenn diese getroffen werden, erhalten sie ebenfalls den Schadensbonus.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_Lore</Data></Cell>
@@ -4911,7 +4911,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_Turret_variant_14_desc</Data></Cell>
     <Cell ss:StyleID="s26"><Data ss:Type="String">Increases the Damage dealt by the turret.\n\nDecreases the duration that the turret remains active.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Erhöhte den Schaden der vom Geschützturm verursacht wird.\n\nVerringert die Dauer, die ein Geschützturm aktiv sein kann.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Erhöht den Schaden der vom Geschützturm verursacht wird.\n\nVerringert die Dauer, die ein Geschützturm aktiv sein kann.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_Turret_variant_15</Data></Cell>
@@ -5290,8 +5290,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_AetherBlade_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">Adds an additional attack to this Skill's combo that deals Damage in an Area-of-Effect around the player.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Fügt der Fähigkeit eine weiteren Angriff hinzu, welcher Schaden in einem 360° Effektbereich um den Spieler herum verursacht.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">Adds an additional attack to this Skill's combo.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Fügt der Fähigkeiten Kombo eine weitere Attacke hinzu.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_AetherBlade_variant_2</Data></Cell>
@@ -6395,8 +6395,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4</Data></Cell>
-    <Cell ss:StyleID="s22"><Data ss:Type="String">Noxious Smog</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Schädlicher Smog</Data></Cell>
+    <Cell ss:StyleID="s22"><Data ss:Type="String">Foul Guardian</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Fauliger Wächter</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4_desc</Data></Cell>
@@ -6410,8 +6410,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When this Skill's Area-of-Effect explodes, there is a Chance that Allies  within its Area-of-Effect will receive a Buff that will increase their Ailment Chance Score.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Wenn der Effektbereich von dieser Fähigkeit explodiert, besteht die Möglichkeit, dass Verbündete im Effektbereich einen Buff erhalten, der ihre Chance auf einen Status Effekt erhöht.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, you and Allies within this Skill's Area-of-Effect will receive a Buff that increases Ailment Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Beim Wirken erhälst du und Verbündete im Effektbereich dieser Fähigkeit einen Buff, der die Chance auf Status Effekte erhöht.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_6</Data></Cell>
@@ -6760,7 +6760,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_Vault_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cats. this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Beendet jegliche Massenkontrolleffekte, sobald die Fähigkeit gewirkt wird.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
@@ -9266,7 +9266,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_damage_percent_buff_skill</Data></Cell>
     <Cell ss:StyleID="s30"><Data ss:Type="String">Increased Damage</Data></Cell>
-    <Cell ss:StyleID="s31"><Data ss:Type="String">Erhöhte den Schaden</Data></Cell>
+    <Cell ss:StyleID="s31"><Data ss:Type="String">Erhöht den Schaden</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_damage_taken_percent_from_projectile_buff_skill</Data></Cell>
