--- a/datamine/lang/german_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/german_xml.pak/text_ui_EIM.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-04-02T08:53:09Z</Created>
-  <LastSaved>2020-04-02T08:53:09Z</LastSaved>
+  <Created>2020-04-14T10:17:27Z</Created>
+  <LastSaved>2020-04-14T10:17:27Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -3263,7 +3263,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_eim_freeze_chance_to_crit</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflcit Freeze anymore.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflict Freeze anymore.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Wenn deine Treffer eine Einfrierungschance haben, wird %1 der Einfrierungschance zu deiner kritischen Chance hinzugefügt. Diese Treffer lösen keine Einfrierungen aus.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
