--- a/datamine/lang/german_xml.pak/text_ui_Endgame.xml
+++ b/datamine/lang/german_xml.pak/text_ui_Endgame.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-04-02T08:53:12Z</Created>
-  <LastSaved>2020-04-02T08:53:12Z</LastSaved>
+  <Created>2020-04-14T10:17:27Z</Created>
+  <LastSaved>2020-04-14T10:17:27Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -688,7 +689,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_wonder_1_construct_reward_desc</Data></Cell>
     <Cell ss:StyleID="s67"><Data ss:Type="String">The Archives have been restored, decreasing buying prices and increasing selling prices.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Das Archiv wurde restauriert, wobei die Kaufpreise gesenkt und die Verkaufspreise bei Händlern erhöht wurden.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Das Archiv wurde saniert. Die Kaufpreise sind gesenkt und die Verkaufspreise bei Händlern erhöht.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_wonder_2_construct</Data></Cell>
@@ -1548,7 +1549,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s69"><Data ss:Type="String">ui_coast_of_wrecks_seekers_expedition_lore</Data></Cell>
     <Cell ss:StyleID="s67"><Data ss:Type="String">The Radiant Fleet sails proud and haughty in its diamond coats, piercing through the waves of the Sea of Torment. Another fate awaits those with enough hubris to follow their lead but without the coin to ask for the Fleet’s help.\n\nThey become part of the landscape.\n\nThe sea washes dregs of old stories, ancient tragedies onto its shores. For those uninterested in tales, the yards of debris have more practical uses.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potential Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Temporary Productivity Boost.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Die strahlende Flotte segelt stolz und hochmütig in ihren Diamantmänteln und durchbohrt die Wellen des Meeres der Qual. Ein anderes Schicksal erwartet diejenigen mit genug Hybris, die ihrer Führung folgen aber keine Münzen haben, um die Hilfe der Flotte zu erbitten.\n\nSie werden Teil der Landschaft.\n\nDas Meer wäscht die Trümmer alter Geschichten und antiker Tragödien an seinen Ufern an. Für diejenigen, die sich nicht für die in den Trümmern enthaltenen Geschichten interessieren, gibt es praktischere Verwendungsmöglichkeiten für die Materialien an der Wrackküste.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Mögliche Ergebnisse:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Temporäre Produktivitätssteigerung.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Die strahlende Flotte segelt stolz und hochmütig in ihren Diamantmänteln und durchbohrt die Wellen des Meeres der Qual. Ein anderes Schicksal erwartet diejenigen mit genug Hybris, die ihrer Führung folgen aber keine Münzen haben, um die Hilfe der Flotte zu erbitten.\nSie werden Teil der Landschaft.\nDas Meer wäscht die Trümmer alter Geschichten und antiker Tragödien an seinen Ufern an. Für diejenigen, die sich nicht für die in den Trümmern enthaltenen Geschichten interessieren, gibt es praktischere Verwendungsmöglichkeiten für die Materialien an der Wrackküste.\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Mögliche Ergebnisse:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Temporäre Produktivitätssteigerung.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s69"><Data ss:Type="String">ui_coast_of_wrecks_seekers_reward</Data></Cell>
@@ -2253,7 +2254,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s69"><Data ss:Type="String">ui_morkai_mines_diplomats_expedition_lore</Data></Cell>
     <Cell ss:StyleID="s67"><Data ss:Type="String">Nothing should be able to live in the Salt Deserts of Morkaï, and yet something does. Below the Tower of Salt, a circle of blind monks toils in the mines. The diamonds that they collect are the very same that fortify the Radiant Fleet.\n\nThe monks warn merchant caravans from entering the caves, claiming they are home to an evil that only they are shielded from. Figures of women and men in anguish stand inside, sculpted in sand. Any enterprise taken towards the diamond mines should be carefully considered.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potential Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Loot received: Gems and Genesis Stones.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Nichts sollte in der Lage sein, in den Salzwüsten von Morkaï zu überleben, und doch schafft dies etwas. Unterhalb des Salzturms arbeitet ein Kreis von Mönchen in den Minen. Die Diamanten, die sie einsammeln, sind die gleichen, die die Strahlende Flotte stärken.\n\nDie Mönche warnen die Handelskarawanen vor dem Betreten der Höhlen und behaupten, sie seien die Heimat eines Übels, vor dem nur sie selbst geschützt sind. In den Höhlen stehen Figuren von Frauen und Männern die aus dem Sand heraus gemeißelt wurden. Jedes Unternehmen, das in Richtung der Diamantenminen unternommen wird, sollte sorgfältig geplant werden.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Mögliche Ergebnisse:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Beute erhalten: Edelsteine und Sari-Edelsteine.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Nichts sollte in der Lage sein, in den Salzwüsten von Morkaï zu überleben, und doch schafft dies etwas. Unterhalb des Salzturms arbeitet ein Kreis von Mönchen in den Minen. Die Diamanten, die sie einsammeln, sind die gleichen, die die Strahlende Flotte stärken.\nDie Mönche warnen die Handelskarawanen vor dem Betreten der Höhlen und behaupten, sie seien die Heimat eines Übels, vor dem nur sie selbst geschützt sind. In den Höhlen stehen Figuren von Frauen und Männern die aus dem Sand heraus gemeißelt wurden. Jedes Unternehmen, das in Richtung der Diamantenminen unternommen wird, sollte sorgfältig geplant werden.\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Mögliche Ergebnisse:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Beute erhalten: Edelsteine und Sari-Edelsteine.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s69"><Data ss:Type="String">ui_morkai_mines_diplomats_reward</Data></Cell>
