--- a/datamine/lang/german_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/german_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-04-02T08:53:11Z</Created>
-  <LastSaved>2020-04-02T08:53:11Z</LastSaved>
+  <Created>2020-04-14T10:17:27Z</Created>
+  <LastSaved>2020-04-14T10:17:27Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -1962,7 +1962,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_champion_helmet</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Autarchic Secret</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Königlicher Tissarinian Cabasset</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Autarchisches Geheimnis</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_champion_helmet_lore</Data></Cell>
