--- a/datamine/lang/portuguese_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/portuguese_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:06:37Z</Created>
-  <LastSaved>2020-03-31T09:06:37Z</LastSaved>
+  <Created>2020-04-09T09:46:35Z</Created>
+  <LastSaved>2020-04-09T09:46:35Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -1382,12 +1383,12 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T10</Data></Cell>
     <Cell ss:StyleID="s71"><Data ss:Type="String">Shadow-Piercing Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistola de Erupção Solar</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistola Perfuradora de Sombra</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T11</Data></Cell>
     <Cell ss:StyleID="s71"><Data ss:Type="String">Solar Flare Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistola Perfuradora de Sombra</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistola de Erupção Solar</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s72"><Data ss:Type="String">ui_Weapon_Pistol_T12</Data></Cell>
