--- a/datamine/lang/spanish_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/spanish_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:00:27Z</Created>
-  <LastSaved>2020-03-31T09:00:27Z</LastSaved>
+  <Created>2020-04-09T09:41:02Z</Created>
+  <LastSaved>2020-04-09T09:41:02Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -965,7 +965,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonMelee_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If the Maximum Summons is reached, the zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If Maximum Summons is reached, zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Invoca a un zombi en la posición del cursor que golpea a Enemigos con Ataques Cuerpo a Cuerpo. Si se alcanzan las Invocaciones Máximas, los zombis cargan en la dirección del cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Hechizo:&lt;/font&gt; Solo se puede usar con bastones o catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Etiquetas de Habilidad&lt;/font&gt;: &lt;b&gt;Hechizo&lt;/b&gt;, &lt;b&gt;Invocación&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -980,8 +980,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonRanged_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles at Enemies. If the Maximum Summons is reached, the zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Invoca a un zombi en la posición del cursor que lanza Proyectiles a los Enemigos. Si se alcanzan las Invocaciones Máximas, los zombis lanzan Proyectiles en la posición del cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Hechizo:&lt;/font&gt; Solo se puede usar con bastones o catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Etiquetas de Habilidad&lt;/font&gt;: &lt;b&gt;Hechizo&lt;/b&gt;, &lt;b&gt;Invocación&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles. If Maximum Summons is reached, zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Invoca a un zombi en la posición del cursor que lanza Proyectiles. Si se alcanzan las Invocaciones Máximas, los zombis lanzan Proyectiles en la posición del cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Hechizo:&lt;/font&gt; Solo se puede usar con bastones o catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Etiquetas de Habilidad&lt;/font&gt;: &lt;b&gt;Hechizo&lt;/b&gt;, &lt;b&gt;Invocación&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonRanged_Lore</Data></Cell>
@@ -995,8 +995,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonChampion_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. The zombie generates Threat with a warcry if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Invoca a un zombi en la posición del cursor que genera Amenaza e inflige Daño Tóxico a los Enemigos con Ataques Cuerpo a Cuerpo. El zombi genera Amenaza con un grito de guerra si se lanza de nuevo.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Hechizo:&lt;/font&gt; Solo se puede usar con bastones o catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Etiquetas de Habilidad&lt;/font&gt;: &lt;b&gt;Hechizo&lt;/b&gt;, &lt;b&gt;Invocación&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. Zombie generates Threat if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Invoca a un zombi en la posición del cursor que genera Amenaza e inflige Daño Tóxico a los Enemigos con Ataques Cuerpo a Cuerpo. El zombi genera Amenaza si se lanza de nuevo.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Hechizo:&lt;/font&gt; Solo se puede usar con bastones o catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Etiquetas de Habilidad&lt;/font&gt;: &lt;b&gt;Hechizo&lt;/b&gt;, &lt;b&gt;Invocación&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_AST_SummonChampion_Lore</Data></Cell>
@@ -2015,8 +2015,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you and your Allies deal with the base Damage Type used by this Skill.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Cuando se Lanza, esta Habilidad otorga un Beneficio al Daño que tú y tus Aliados infligís con el Tipo de Daño base usado por esta habilidad.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you deal with the base Damage Type used by this Skill. The Lighting can now also bounce between Allies, and when they are Hit, they also receive the Damage Buff. </Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Cuando se Lanza, esta Habilidad otorga un Beneficio al Daño que tú y tus Aliados infligís con el Tipo de Daño base usado por esta habilidad. El Rayo ahora también puede rebotar entre los Aliados y cuando son golpeados, también reciben el Beneficio de Daño. </Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_Lore</Data></Cell>
@@ -5290,8 +5290,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_AetherBlade_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">Adds an additional attack to this Skill's combo that deals Damage in an Area-of-Effect around the player.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Añade un ataque adicional a esta Habilidad de combo que hace daño en Área alrededor del jugador.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">Adds an additional attack to this Skill's combo.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Añade un ataque adicional a esta Habilidad de combo.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_AetherBlade_variant_2</Data></Cell>
@@ -6395,8 +6395,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4</Data></Cell>
-    <Cell ss:StyleID="s22"><Data ss:Type="String">Noxious Smog</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Niebla Nociva</Data></Cell>
+    <Cell ss:StyleID="s22"><Data ss:Type="String">Foul Guardian</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Guardián Asqueroso</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4_desc</Data></Cell>
@@ -6410,8 +6410,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When this Skill's Area-of-Effect explodes, there is a Chance that Allies  within its Area-of-Effect will receive a Buff that will increase their Ailment Chance Score.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Cuando el Área de Efecto de esta Habilidad explota, hay una Probabilidad de que los Aliados dentro de su Área de Efecto reciban un Beneficio que aumentará su Puntuación de Probabilidad de Dolencias.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, you and Allies within this Skill's Area-of-Effect will receive a Buff that increases Ailment Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Cuando se Lanza, tú y los Aliados dentro del Área de Efecto de esta Habilidad recibiréis un Beneficio que aumenta la Puntuación de Probabilidad de Dolencia.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_6</Data></Cell>
@@ -6760,7 +6760,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_Vault_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cats. this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">When Cast, this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Cuando se Lanza, esta Habilidad rompe cualquier Efecto de Control de Masas que te afecte.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
