--- a/datamine/lang/spanish_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/spanish_xml.pak/text_ui_EIM.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:00:33Z</Created>
-  <LastSaved>2020-03-31T09:00:33Z</LastSaved>
+  <Created>2020-04-09T09:41:08Z</Created>
+  <LastSaved>2020-04-09T09:41:08Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -3263,7 +3263,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_eim_freeze_chance_to_crit</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflcit Freeze anymore.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflict Freeze anymore.</Data></Cell>
     <Cell ss:StyleID="s18"><Data ss:Type="String">Si tus golpes tienen Probabilidad de Congelar, %1 de tu Probabilidad de Congelar se añade a tu Probabilidad de Crítico. Estos golpes ya no influyen en la congelación.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
