--- a/datamine/lang/Chineses_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/Chineses_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:05:57Z</Created>
-  <LastSaved>2020-03-31T09:05:57Z</LastSaved>
+  <Created>2020-04-09T09:46:02Z</Created>
+  <LastSaved>2020-04-09T09:46:02Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -965,7 +966,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonMelee_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If the Maximum Summons is reached, the zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If Maximum Summons is reached, zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">在光标位置召唤一个通过近战攻击造成伤害的僵尸。如果僵尸的数量达到最大，施放技能就会让它们向光标位置冲锋。\n\n&lt;font color=&quot;#948ec6&quot;&gt;（法术技能）&lt;/font&gt;需要法杖或法器。\n\n&lt;font color=&quot;#509FFF&quot;&gt;技能标签&lt;/font&gt;：&lt;b&gt;法术&lt;/b&gt;，&lt;b&gt;召唤&lt;/b&gt;。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -980,8 +981,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles at Enemies. If the Maximum Summons is reached, the zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">在光标位置召唤一个通过远程攻击造成伤害的僵尸。如果僵尸的数量达到最大，施放技能会让它们朝光标位置发射投射物。\n\n&lt;font color=&quot;#948ec6&quot;&gt;（法术技能）&lt;/font&gt;需要法杖或法器。\n\n&lt;font color=&quot;#509FFF&quot;&gt;技能标签&lt;/font&gt;：&lt;b&gt;法术&lt;/b&gt;，&lt;b&gt;召唤&lt;/b&gt;。</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles. If Maximum Summons is reached, zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">在光标位置召唤一个发射投射物的僵尸。如果僵尸的数量达到最大，施放技能会让它们朝光标位置发射投射物。\n\n&lt;font color=&quot;#948ec6&quot;&gt;（法术技能）&lt;/font&gt;需要法杖或法器。\n\n&lt;font color=&quot;#509FFF&quot;&gt;技能标签&lt;/font&gt;：&lt;b&gt;法术&lt;/b&gt;，&lt;b&gt;召唤&lt;/b&gt;。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_Lore</Data></Cell>
@@ -995,7 +996,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonChampion_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. The zombie generates Threat with a warcry if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. Zombie generates Threat if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">在光标位置召唤一具会生成仇恨和通过近战攻击对敌人造成毒素伤害的僵尸。再次施放技能，傀儡会发动战吼生成仇恨。\n\n&lt;font color=&quot;#948ec6&quot;&gt;（法术技能）&lt;/font&gt;需要法杖或法器。\n\n&lt;font color=&quot;#509FFF&quot;&gt;技能标签&lt;/font&gt;：&lt;b&gt;法术&lt;/b&gt;，&lt;b&gt;召唤&lt;/b&gt;。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -2015,8 +2016,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you and your Allies deal with the base Damage Type used by this Skill.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">该技能会在施放时提供一个BUFF，让你和你的盟友获得类型取决于该技能基础伤害类型的额外伤害。</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you deal with the base Damage Type used by this Skill. The Lighting can now also bounce between Allies, and when they are Hit, they also receive the Damage Buff. </Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">该技能会在施放时提供一个BUFF，让你和你的盟友获得类型取决于该技能基础伤害类型的额外伤害。 并且闪电链可以在盟友间跳跃，被闪电链命中的盟友也会获得该伤害BUFF。 </Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_Lore</Data></Cell>
@@ -5290,8 +5291,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo that deals Damage in an Area-of-Effect around the player.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">在该技能的连击中额外增加一次360度的攻击，造成AOE伤害。</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">该技能的连击额外增加一段。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_2</Data></Cell>
@@ -6395,8 +6396,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4</Data></Cell>
-    <Cell ss:StyleID="s66"><Data ss:Type="String">Noxious Smog</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">毒雾</Data></Cell>
+    <Cell ss:StyleID="s66"><Data ss:Type="String">Foul Guardian</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">愚痴守卫</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4_desc</Data></Cell>
@@ -6410,8 +6411,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When this Skill's Area-of-Effect explodes, there is a Chance that Allies  within its Area-of-Effect will receive a Buff that will increase their Ailment Chance Score.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">该技能制造爆炸时，有几率让技能AOE范围内的盟友获得一个异常状态几率值加成BUFF。</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, you and Allies within this Skill's Area-of-Effect will receive a Buff that increases Ailment Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">施放时，在该技能范围内为你和盟友提供一个异常状态几率值加成BUFF。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_6</Data></Cell>
@@ -6760,7 +6761,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_Vault_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cats. this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">施放此技能会破除你受到的任何控制效果。</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
