--- a/datamine/lang/french_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/french_xml.pak/text_ui_EIM.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:00:21Z</Created>
-  <LastSaved>2020-03-31T09:00:21Z</LastSaved>
+  <Created>2020-04-09T09:40:57Z</Created>
+  <LastSaved>2020-04-09T09:40:57Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -3263,7 +3264,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s77"><Data ss:Type="String">ui_eim_freeze_chance_to_crit</Data></Cell>
-    <Cell ss:StyleID="s66"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflcit Freeze anymore.</Data></Cell>
+    <Cell ss:StyleID="s66"><Data ss:Type="String">If your Hits have Freeze Chance, %1 of your Freeze Chance is added to your Critical Chance. These Hits do not inflict Freeze anymore.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">Si vous avez des chances de Geler, %1 de ces chances sont ajoutées à vos chances de Coup Critique. Ces coups ne peuvent plus geler les ennemis.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
