--- a/datamine/lang/polish_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:03:56Z</Created>
-  <LastSaved>2020-03-31T09:03:56Z</LastSaved>
+  <Created>2020-04-09T09:44:13Z</Created>
+  <LastSaved>2020-04-09T09:44:13Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -965,7 +966,7 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonMelee_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If the Maximum Summons is reached, the zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If Maximum Summons is reached, zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">Przywołaj zombie w miejsce położenia kursora, który atakuje wrogów w zwarciu. Po osiągnięciu maksymalnej ilości przywałańców, zombie szarżują w kierunku kursora.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Zaklęcie:&lt;/font&gt; Można używać tylko z kosturami lub katalizatorami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;zaklęcie&lt;/b&gt;, &lt;b&gt;przywołaniec&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
@@ -980,8 +981,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles at Enemies. If the Maximum Summons is reached, the zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Przywołaj zombie w miejscu kursora, który wystrzeliwuje pociski we wrogów. Jeśli liczba zombie jest maksymalna, skupiają ogień na celu w miejscu położenia kursora.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Zaklęcie:&lt;/font&gt; Można używać tylko z kosturami lub katalizatorami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;zaklecie&lt;/b&gt;, &lt;b&gt;przywołaniec&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles. If Maximum Summons is reached, zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Przywołaj zombie w miejscu kursora, który wystrzeliwuje pociski. Jeśli liczba zombie jest maksymalna strzelają pociskami w miejsce położenia kursora.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Zaklęcie:&lt;/font&gt; Można używać tylko z kosturami lub katalizatorami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;zaklecie&lt;/b&gt;, &lt;b&gt;przywołaniec&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_Lore</Data></Cell>
@@ -995,8 +996,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonChampion_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. The zombie generates Threat with a warcry if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Przywołaj zombie w miejscu położenia kursora, który generuje poziom zagrożenie i zadaje wrogom obrażenia toksyczne za pomocą ataków w zwarciu. Zombie generuje poziom zagrożenia poprzez okrzyk wojenny, jeśli ponownie użyjesz umiejętności.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Zaklęcie:&lt;/font&gt; Można używać tylko z kosturami lub katalizatorami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;zaklęcie&lt;/b&gt;, &lt;b&gt;przywołaniec&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. Zombie generates Threat if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Przywołaj zombie w miejscu położenia kursora, który generuje poziom zagrożenie i zadaje wrogom obrażenia toksyczne za pomocą ataków w zwarciu. Zombie generuje poziom zagrożenia jeśli ponownie użyjesz umiejętności.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Zaklęcie:&lt;/font&gt; Można używać tylko z kosturami lub katalizatorami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;zaklęcie&lt;/b&gt;, &lt;b&gt;przywołaniec&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonChampion_Lore</Data></Cell>
@@ -2015,8 +2016,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you and your Allies deal with the base Damage Type used by this Skill.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Kiedy jest użyta, umiejętność ta daje premię do obrażeń, które ty i twoi sojusznicy zadajecie podstawowym typem obrażeń używanym przez tę umiejętność.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you deal with the base Damage Type used by this Skill. The Lighting can now also bounce between Allies, and when they are Hit, they also receive the Damage Buff. </Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Po użyciu, umiejętność ta daje premię do obrażeń, które ty zadajesz podstawowym typem obrażeń używanym przez tę umiejętność. Błyskawice mogą teraz odbijać się między sojusznikami, a gdy zostaną trafieni, otrzymują także premię do obrażeń. </Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_Lore</Data></Cell>
@@ -5290,8 +5291,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo that deals Damage in an Area-of-Effect around the player.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Dodaje dodatkowy atak do tej kombinacji umiejętności, która zadaje obrażenia w obszarze działania wokół gracza.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Dodaje dodatkowy atak do kombinacji umiejętności.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_2</Data></Cell>
@@ -6395,8 +6396,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4</Data></Cell>
-    <Cell ss:StyleID="s66"><Data ss:Type="String">Noxious Smog</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Trujące Opary</Data></Cell>
+    <Cell ss:StyleID="s66"><Data ss:Type="String">Foul Guardian</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Obrzydliwy Obrońca</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4_desc</Data></Cell>
@@ -6410,8 +6411,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When this Skill's Area-of-Effect explodes, there is a Chance that Allies  within its Area-of-Effect will receive a Buff that will increase their Ailment Chance Score.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Kiedy obszar działania tej umiejętności eksploduje, istnieje szansa, że sojusznicy w obrębie tego obszaru działania otrzymają premię, która zwiększy ich wartość szansy na dolegliwość.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, you and Allies within this Skill's Area-of-Effect will receive a Buff that increases Ailment Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Po użyciu, ty i sojusznicy w obszarze działania tej umiejętności otrzymacie premię, która zwiększa wartość szansy na dolegliwość.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_6</Data></Cell>
@@ -6760,7 +6761,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_Vault_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cats. this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
     <Cell ss:StyleID="s65"><Data ss:Type="String">Kiedy używasz tej umiejętności, przerywa ona wszelkie efekty kontroli, które na ciebie nałożono.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
