--- a/datamine/lang/portuguese_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/portuguese_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:06:28Z</Created>
-  <LastSaved>2020-03-31T09:06:28Z</LastSaved>
+  <Created>2020-04-09T09:46:28Z</Created>
+  <LastSaved>2020-04-09T09:46:28Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -965,8 +966,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonMelee_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If the Maximum Summons is reached, the zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que atinge os inimigos com ataques de combate corpo a corpo. Se o Máximo de Invocações é atingido, os zumbis investem na direção do cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that hits Enemies with Melee Attacks. If Maximum Summons is reached, zombies charge in the direction of the cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que atinge os inimigos com ataques corpo a corpo. Se o Máximo de Lacaios é atingido, os zumbis investem na direção do cursor.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonMelee_Lore</Data></Cell>
@@ -980,8 +981,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles at Enemies. If the Maximum Summons is reached, the zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que dispara projéteis no inimigo. Se o Máximo de Invocações é atingido, os zumbis lançam projéteis na direção do cursor\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that launches Projectiles. If Maximum Summons is reached, zombies launch Projectiles at the cursor’s location.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que dispara projéteis no inimigo. Se o Máximo de Lacaios é atingido, os zumbis lançam projéteis na direção do cursor\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonRanged_Lore</Data></Cell>
@@ -995,8 +996,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonChampion_desc</Data></Cell>
-    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. The zombie generates Threat with a warcry if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que gera Ameaça e causa Dano Venenoso nos inimigos com ataques corpo a corpo. O zumbi gera Ameaça com um grito se relançar a Habilidade.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s68"><Data ss:Type="String">Summon a zombie at the cursor’s location that generates Threat and deals Toxic Damage to Enemies with Melee Attacks. Zombie generates Threat if Cast again.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Spell:&lt;/font&gt; Only usable with staves or catalysts.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Spell&lt;/b&gt;, &lt;b&gt;Summon&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Invoca um zumbi no local do cursor que gera Ameaça e causa Dano Venenoso nos inimigos com ataques corpo a corpo. O zumbi gera Ameaça se relançar a Habilidade.\n\n&lt;font color=&quot;#948ec6&quot;&gt;Feitiço:&lt;/font&gt; Utilizável apenas com cajados ou catalizadores.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Tipo da Habilidade&lt;/font&gt;: &lt;b&gt;Feitiço&lt;/b&gt;, &lt;b&gt;Invocação&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SummonChampion_Lore</Data></Cell>
@@ -2015,8 +2016,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you and your Allies deal with the base Damage Type used by this Skill.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Ao lançar, a Habilidade concede um aumento ao dano que você e seus aliados causam com base no tipo de dano usado pela Habilidade.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill grants a Buff to the Damage you deal with the base Damage Type used by this Skill. The Lighting can now also bounce between Allies, and when they are Hit, they also receive the Damage Buff. </Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Ao lançar, a Habilidade concede um aumento ao dano que você causa com base no tipo de dano usado pela Habilidade. O raio pode saltar entre os aliados e ao serem atingidos eles também receberão o aumento de dano. </Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_ChainLightning_variant_8_Lore</Data></Cell>
@@ -5290,8 +5291,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo that deals Damage in an Area-of-Effect around the player.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Adiciona um ataque adicional ao combo da Habilidade que causa dano numa área de efeito ao redor do jogador.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">Adds an additional attack to this Skill's combo.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Adiciona um ataque adicional ao combo da Habilidade.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_AetherBlade_variant_2</Data></Cell>
@@ -6395,8 +6396,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4</Data></Cell>
-    <Cell ss:StyleID="s66"><Data ss:Type="String">Noxious Smog</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Poluição Nociva</Data></Cell>
+    <Cell ss:StyleID="s66"><Data ss:Type="String">Foul Guardian</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Guardião Asqueroso</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_4_desc</Data></Cell>
@@ -6410,8 +6411,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When this Skill's Area-of-Effect explodes, there is a Chance that Allies  within its Area-of-Effect will receive a Buff that will increase their Ailment Chance Score.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Quando a área de efeito da Habilidade explode, há chance de um aliado dentro da área de efeito receber um aumento de seu Total da Chance de infligir Debilidades.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, you and Allies within this Skill's Area-of-Effect will receive a Buff that increases Ailment Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Ao lançar, você e os aliados dentro da área de efeito receberão um bônus ao Total de Chance de infligir Debilidade.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_CorpseExplosion_variant_6</Data></Cell>
@@ -6760,8 +6761,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_Vault_variant_5_desc</Data></Cell>
-    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cats. this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Lançar esta Habilidade remove todos os efeitos de controle coletivo que afetam você.</Data></Cell>
+    <Cell ss:StyleID="s70"><Data ss:Type="String">When Cast, this Skill breaks any Crowd Control Effects you are affected by.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Ao lançar, a Habilidade remove todos os efeitos de controle coletivo que afetam você.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_Vault_variant_6</Data></Cell>
