--- a/datamine/lang/portuguese_xml.pak/text_ui_Endgame.xml
+++ b/datamine/lang/portuguese_xml.pak/text_ui_Endgame.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-31T09:06:37Z</Created>
-  <LastSaved>2020-03-31T09:06:37Z</LastSaved>
+  <Created>2020-04-09T09:46:36Z</Created>
+  <LastSaved>2020-04-09T09:46:36Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -22,6 +22,7 @@
   <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
